--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,4 +13,13 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17'
-      - run: make check test build
+      - name: check
+        run: make check
+      - name: test
+        run: make test
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          distribution: goreleaser
+          version: latest
+          args: build --snapshot
