Fix test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,11 +6,11 @@ on:
       - labeled
   workflow_dispatch:
   schedule:
-    - cron: 0 8 * * *
+    - cron: 10 * * * *
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo ${{ fromJson(github.event) }}
+          echo ${{ github.event }}
