Fix bad workflow
Signed-off-by: Charly Molter <charly.molter@konghq.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo ${{ toJSON(github.event) }}
+          echo $DATA
+        env:
+          DATA: ${{ toJSON(github.event) }}
