feat(.github): add an action to rotate an issue between a list of assignees
Signed-off-by: Charly Molter <charly.molter@konghq.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,13 @@ on:
     - cron: 30 * * * *
 
 jobs:
+  assign:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ./.github/workflows/rolling-issue-assignment.yaml@master
+        with:
+          issue: 4
+          users: lahabana,guillaumemolter
   test:
     runs-on: ubuntu-latest
     steps:
