--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,8 @@ jobs:
   assign:
     runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/workflows/rolling-issue-assignment.yaml@master
+      - uses: actions/checkout@v2
+      - uses: ./.github/workflows/rolling-issue-assignment.yaml
         with:
           issue: 4
           users: lahabana,guillaumemolter
