--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,13 +10,10 @@ on:
 
 jobs:
   assign:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/workflows/rolling-issue-assignment.yaml
-        with:
-          issue: 4
-          users: lahabana,guillaumemolter
+    uses: ./.github/workflows/rolling-issue-assignment.yml@master
+    with:
+      issue: 4
+      users: lahabana,guillaumemolter
   test:
     runs-on: ubuntu-latest
     steps:
