--- a/.github/workflows/rolling-issue-assignment.yml
+++ b/.github/workflows/rolling-issue-assignment.yml
@@ -22,9 +22,10 @@ jobs:
               repo: context.repo.repo,
               issue_number: ${{ inputs.issue }}
             };
-            const issue = await github.rest.issues.get(baseReq)
+            const issue = await github.rest.issues.get(baseReq);
             const candidates ="${{ inputs.users }}".split(",");
             let newAssignee = "";
+            console.log(issue.assignees);
             if (issue.assignees.length === 0) {
               newAssignee = candidates[0];
             } else {
