--- a/.github/workflows/rolling-issue-assignment.yml
+++ b/.github/workflows/rolling-issue-assignment.yml
@@ -24,12 +24,12 @@ jobs:
             };
             const issue = await github.rest.issues.get(baseReq);
             const candidates ="${{ inputs.users }}".split(",");
+            const assignees = issue.data.assignees;
             let newAssignee = "";
-            console.log(issue);
-            if (!issue || issue.assignees.length === 0) {
+            if (assignees.length === 0) {
               newAssignee = candidates[0];
             } else {
-              const curAssignee = issue.assignees[0].login;
+              const curAssignee = assignees[0].login;
               await github.rest.issues.removeAssignees({...baseReq, assignees: [curAssignee]});
               for (let i = 0; i < candidates.length; i++) {
                 if (candidates[i] === curAssignee) {
